perf: optimize reservation and allowance queries in ReservationService
Replaces in-memory Stream filtering of large entity collections with targeted Panache database queries to drastically reduce memory usage and I/O overhead during reservation creation.