@@ -38,6 +38,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -218,8 +220,10 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id)).thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
+                .thenReturn(Collections.emptyList());
         doNothing().when(eventUserAllowanceRepository).persist(any(EventUserAllowance.class));
 
         List<UserReservationResponseDTO> result =
@@ -312,8 +316,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser))
-                .thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.empty());
 
         assertThrows(
                 EventNotFoundException.class,
@@ -333,7 +337,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1, seat2, seat3));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 NoSeatsAvailableException.class,
@@ -349,7 +354,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 EventBookingClosedException.class,
@@ -369,7 +375,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 EventBookingClosedException.class,
@@ -392,7 +399,8 @@ class ReservationServiceTest {
                         CodeGenerator.generateRandomCode());
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(reservationRepository.findByEventId(event.id))
                 .thenReturn(List.of(existingReservation));
 
@@ -417,7 +425,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(reservationRepository.findByEventId(event.id))
                 .thenReturn(List.of(existingReservation));
 
@@ -435,7 +444,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
                 .thenReturn(Optional.of(allowance));
 
@@ -451,7 +461,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
                 .thenReturn(Optional.of(allowance));
 
@@ -470,8 +481,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser))
-                .thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.empty());
 
         assertDoesNotThrow(
                 () -> reservationService.deleteReservationForUser(List.of(id(1)), currentUser));
@@ -508,8 +519,10 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id)).thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
+                .thenReturn(Collections.emptyList());
         doNothing().when(eventUserAllowanceRepository).persist(any(EventUserAllowance.class));
 
         reservationService.createReservationForUser(dto, currentUser);
